--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "learn-react-code",
-  "version": "1.0.0",
+  "name": "base-webapck-react",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --port 3000 --host 0.0.0.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react": "^15.2.1"
   },
   "devDependencies": {
-    "babel-core": "^5.8.34",
-    "babel-loader": "^5.4.0",
-    "webpack": "^1.12.9"
+    "babel-core": "^6.6.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "html-webpack-plugin": "^2.22.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.0",
+    "style-loader": "^0.12.4",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
