--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.2.1"
+    "jquery": "^3.1.0",
+    "lodash.template": "^4.2.5",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.6.4",
@@ -18,6 +21,7 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
