--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "brfs": "^1.4.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.6.1",
@@ -28,6 +29,7 @@
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.0",
     "style-loader": "^0.12.4",
+    "transform-loader": "^0.2.3",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
