--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery": "^3.1.0",
     "lodash.template": "^4.2.5",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-lazyload": "^2.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.6.4",
